force-app/main/default/objects/AI_Test_Cycle__c/AI_Test_Cycle__c.object-meta.xml
<CustomObject>
    <label>Test Cycle</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>