force-app/main/default/objects/AI_Test_Cycle__c/fields/AI_Agent__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AI_Agent__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Agent__c</referenceTo>
    <relationshipLabel>Test Cycles</relationshipLabel>
    <relationshipName>Test_Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>