force-app/main/default/objects/AI_Test_Cycle__c/fields/AI_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AI_Prompt__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Test Cycles</relationshipLabel>
    <relationshipName>Test_Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>