force-app/main/default/objects/AI_Test_Cycle__c/fields/AI_Verification_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Verification_Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verification Prompt</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Verification Prompt would only run on Security Audit record.</errorMessage>
        <filterItems>
            <field>AI_Prompt__c.Object__c</field>
            <operation>contains</operation>
            <value>AI_Response__c</value>
        </filterItems>
        <filterItems>
            <field>AI_Prompt__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Test Cycles (Verification Prompt)</relationshipLabel>
    <relationshipName>Test_Cycles_Verification</relationshipName>
    <type>Lookup</type>
</CustomField>