force-app/main/default/objects/AI_Test_Cycle__c/validationRules/Agent_OR_Prompt_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_OR_Prompt_Mandatory</fullName>
    <active>true</active>
    <description>You must enter a value in either the Agent or the Prompt field, but not both.</description>
    <errorConditionFormula>OR( AND( ISBLANK( AI_Agent__c ) ,  ISBLANK( AI_Prompt__c ) ), AND(NOT(ISBLANK( AI_Agent__c )), NOT(ISBLANK( AI_Prompt__c ))))</errorConditionFormula>
    <errorMessage>You must enter a value in either the Agent or the Prompt field, but not both.</errorMessage>
</ValidationRule>